Disabled all but rdf-file-list-generation in build-from-scratch-ag